docs/1.130/compute/v1beta1/computeImage.md
---
permalink: /1.130/compute/v1beta1/computeImage/
---

# compute.v1beta1.computeImage



## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDescription(description)`](#fn-specwithdescription)
  * [`fn withDiskSizeGb(diskSizeGb)`](#fn-specwithdisksizegb)
  * [`fn withFamily(family)`](#fn-specwithfamily)
  * [`fn withGuestOsFeatures(guestOsFeatures)`](#fn-specwithguestosfeatures)
  * [`fn withGuestOsFeaturesMixin(guestOsFeatures)`](#fn-specwithguestosfeaturesmixin)
  * [`fn withLicenses(licenses)`](#fn-specwithlicenses)
  * [`fn withLicensesMixin(licenses)`](#fn-specwithlicensesmixin)
  * [`fn withResourceID(resourceID)`](#fn-specwithresourceid)
  * [`fn withStorageLocations(storageLocations)`](#fn-specwithstoragelocations)
  * [`fn withStorageLocationsMixin(storageLocations)`](#fn-specwithstoragelocationsmixin)
  * [`obj spec.diskRef`](#obj-specdiskref)
    * [`fn withExternal(external)`](#fn-specdiskrefwithexternal)
    * [`fn withName(name)`](#fn-specdiskrefwithname)
    * [`fn withNamespace(namespace)`](#fn-specdiskrefwithnamespace)
  * [`obj spec.guestOsFeatures`](#obj-specguestosfeatures)
    * [`fn withType(type)`](#fn-specguestosfeatureswithtype)
  * [`obj spec.imageEncryptionKey`](#obj-specimageencryptionkey)
    * [`obj spec.imageEncryptionKey.kmsKeySelfLinkRef`](#obj-specimageencryptionkeykmskeyselflinkref)
      * [`fn withExternal(external)`](#fn-specimageencryptionkeykmskeyselflinkrefwithexternal)
      * [`fn withName(name)`](#fn-specimageencryptionkeykmskeyselflinkrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specimageencryptionkeykmskeyselflinkrefwithnamespace)
    * [`obj spec.imageEncryptionKey.kmsKeyServiceAccountRef`](#obj-specimageencryptionkeykmskeyserviceaccountref)
      * [`fn withExternal(external)`](#fn-specimageencryptionkeykmskeyserviceaccountrefwithexternal)
      * [`fn withName(name)`](#fn-specimageencryptionkeykmskeyserviceaccountrefwithname)
      * [`fn withNamespace(namespace)`](#fn-specimageencryptionkeykmskeyserviceaccountrefwithnamespace)
  * [`obj spec.rawDisk`](#obj-specrawdisk)
    * [`fn withContainerType(containerType)`](#fn-specrawdiskwithcontainertype)
    * [`fn withSha1(sha1)`](#fn-specrawdiskwithsha1)
    * [`fn withSource(source)`](#fn-specrawdiskwithsource)
  * [`obj spec.sourceImageRef`](#obj-specsourceimageref)
    * [`fn withExternal(external)`](#fn-specsourceimagerefwithexternal)
    * [`fn withName(name)`](#fn-specsourceimagerefwithname)
    * [`fn withNamespace(namespace)`](#fn-specsourceimagerefwithnamespace)
  * [`obj spec.sourceSnapshotRef`](#obj-specsourcesnapshotref)
    * [`fn withExternal(external)`](#fn-specsourcesnapshotrefwithexternal)
    * [`fn withName(name)`](#fn-specsourcesnapshotrefwithname)
    * [`fn withNamespace(namespace)`](#fn-specsourcesnapshotrefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ComputeImage

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec



### fn spec.withDescription

```ts
withDescription(description)
```

"Immutable. An optional description of this resource. Provide this property when\nyou create the resource."

### fn spec.withDiskSizeGb

```ts
withDiskSizeGb(diskSizeGb)
```

"Immutable. Size of the image when restored onto a persistent disk (in GB)."

### fn spec.withFamily

```ts
withFamily(family)
```

"Immutable. The name of the image family to which this image belongs. You can\ncreate disks by specifying an image family instead of a specific\nimage name. The image family always returns its latest image that is\nnot deprecated. The name of the image family must comply with\nRFC1035."

### fn spec.withGuestOsFeatures

```ts
withGuestOsFeatures(guestOsFeatures)
```

"Immutable. A list of features to enable on the guest operating system.\nApplicable only for bootable images."

### fn spec.withGuestOsFeaturesMixin

```ts
withGuestOsFeaturesMixin(guestOsFeatures)
```

"Immutable. A list of features to enable on the guest operating system.\nApplicable only for bootable images."

**Note:** This function appends passed data to existing values

### fn spec.withLicenses

```ts
withLicenses(licenses)
```

"Immutable. Any applicable license URI."

### fn spec.withLicensesMixin

```ts
withLicensesMixin(licenses)
```

"Immutable. Any applicable license URI."

**Note:** This function appends passed data to existing values

### fn spec.withResourceID

```ts
withResourceID(resourceID)
```

"Immutable. Optional. The name of the resource. Used for creation and acquisition. When unset, the value of `metadata.name` is used as the default."

### fn spec.withStorageLocations

```ts
withStorageLocations(storageLocations)
```

"Immutable. Cloud Storage bucket storage location of the image\n(regional or multi-regional).\nReference link: https://cloud.google.com/compute/docs/reference/rest/v1/images."

### fn spec.withStorageLocationsMixin

```ts
withStorageLocationsMixin(storageLocations)
```

"Immutable. Cloud Storage bucket storage location of the image\n(regional or multi-regional).\nReference link: https://cloud.google.com/compute/docs/reference/rest/v1/images."

**Note:** This function appends passed data to existing values

## obj spec.diskRef

"The source disk to create this image based on.\nYou must provide either this property or the\nrawDisk.source property but not both to create an image."

### fn spec.diskRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `selfLink` field of a `ComputeDisk` resource."

### fn spec.diskRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.diskRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.guestOsFeatures

"Immutable. A list of features to enable on the guest operating system.\nApplicable only for bootable images."

### fn spec.guestOsFeatures.withType

```ts
withType(type)
```

"Immutable. The type of supported feature. Read [Enabling guest operating system features](https://cloud.google.com/compute/docs/images/create-delete-deprecate-private-images#guest-os-features) to see a list of available options. Possible values: [\"MULTI_IP_SUBNET\", \"SECURE_BOOT\", \"SEV_CAPABLE\", \"UEFI_COMPATIBLE\", \"VIRTIO_SCSI_MULTIQUEUE\", \"WINDOWS\", \"GVNIC\", \"SEV_LIVE_MIGRATABLE\", \"SEV_SNP_CAPABLE\", \"SUSPEND_RESUME_COMPATIBLE\", \"TDX_CAPABLE\"]."

## obj spec.imageEncryptionKey

"Immutable. Encrypts the image using a customer-supplied encryption key.\n\nAfter you encrypt an image with a customer-supplied key, you must\nprovide the same key if you use the image later (e.g. to create a\ndisk from the image)."

## obj spec.imageEncryptionKey.kmsKeySelfLinkRef

"The self link of the encryption key that is stored in Google Cloud\nKMS."

### fn spec.imageEncryptionKey.kmsKeySelfLinkRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `selfLink` field of a `KMSCryptoKey` resource."

### fn spec.imageEncryptionKey.kmsKeySelfLinkRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.imageEncryptionKey.kmsKeySelfLinkRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.imageEncryptionKey.kmsKeyServiceAccountRef

"The service account being used for the encryption request for the\ngiven KMS key. If absent, the Compute Engine default service account\nis used."

### fn spec.imageEncryptionKey.kmsKeyServiceAccountRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `email` field of an `IAMServiceAccount` resource."

### fn spec.imageEncryptionKey.kmsKeyServiceAccountRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.imageEncryptionKey.kmsKeyServiceAccountRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.rawDisk

"Immutable. The parameters of the raw disk image."

### fn spec.rawDisk.withContainerType

```ts
withContainerType(containerType)
```

"Immutable. The format used to encode and transmit the block device, which\nshould be TAR. This is just a container and transmission format\nand not a runtime format. Provided by the client when the disk\nimage is created. Default value: \"TAR\" Possible values: [\"TAR\"]."

### fn spec.rawDisk.withSha1

```ts
withSha1(sha1)
```

"Immutable. An optional SHA1 checksum of the disk image before unpackaging.\nThis is provided by the client when the disk image is created."

### fn spec.rawDisk.withSource

```ts
withSource(source)
```

"Immutable. The full Google Cloud Storage URL where disk storage is stored\nYou must provide either this property or the sourceDisk property\nbut not both."

## obj spec.sourceImageRef

"The source image used to create this image."

### fn spec.sourceImageRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `selfLink` field of a `ComputeImage` resource."

### fn spec.sourceImageRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.sourceImageRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"

## obj spec.sourceSnapshotRef

"The source snapshot used to create this image."

### fn spec.sourceSnapshotRef.withExternal

```ts
withExternal(external)
```

"Allowed value: The `selfLink` field of a `ComputeSnapshot` resource."

### fn spec.sourceSnapshotRef.withName

```ts
withName(name)
```

"Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"

### fn spec.sourceSnapshotRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/"